--- a/MVCSept27/MVCSept27.csproj
+++ b/MVCSept27/MVCSept27.csproj
@@ -186,6 +186,10 @@
     <Compile Include="Migrations\202209271512488_addedBookAuthors.designer.cs">
       <DependentUpon>202209271512488_addedBookAuthors.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202209271514383_addedBookAuthors1.cs" />
+    <Compile Include="Migrations\202209271514383_addedBookAuthors1.designer.cs">
+      <DependentUpon>202209271514383_addedBookAuthors1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BookstoreModels.cs" />
@@ -276,6 +280,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202209271512488_addedBookAuthors.resx">
       <DependentUpon>202209271512488_addedBookAuthors.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202209271514383_addedBookAuthors1.resx">
+      <DependentUpon>202209271514383_addedBookAuthors1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
